<resources>
    <string name="app_name">Вербатория v11.4.28</string>
    <string name="loading_please_wait">Пожалуйста, подождите…</string>
    <string name="ok">OK</string>
    <string name="all_understand">Все понятно</string>
    <string name="delete">Удалить</string>
    <string name="find">Найти</string>
    <string name="error">Ошибка</string>
    <string name="writing_data_empty">Нет данных</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="confirmation">Подтверждение</string>
    <string name="exit">Выйти</string>
    <string name="search">Поиск</string>
    <string name="edit">Редактировать</string>
    <string name="clear">Очистить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="token_empty_error">Токен не найден!</string>
    <string name="email_incorrect_error">ОШИБКА: некорректный email-адрес</string>
    <string name="name_or_phone_empty_error">ОШИБКА: заполните поля имя и номер телефона</string>
    <string name="event_detail_create_new_event">Создать запись</string>
    <string name="calendar_activity_child_title">Запись ребенка</string>
    <string name="calendar_possible_children">Возможные варианты</string>
    <string name="calendar_activity_client_title">Запись клиента</string>
    <string name="calendar_activity_search_client_title">Поиск записи клиента</string>
    <string name="calendar_activity_search_child_title">Поиск записи ребенка</string>
    <string name="event_detail_activity_available_time">Доступное время</string>
    <string name="event_detail_activity_confirm_override_message">Отчет уже был отправлен ранее. Нажимая продолжить, вы соглашаетесь с тем, что данные будут перезаписаны.</string>
    <string name="event_detail_activity_continue">Продолжить</string>
    <string name="client">Клиент</string>
    <string name="child">Ребенок</string>
    <string name="time">Время</string>
    <string name="report">Отчет</string>
    <string name="event_detail_send_to_location">Отправить отчет в филиал</string>
    <string name="event_detail_location">Филиал</string>
    <string name="attention_memory">Внимание/Память</string>
    <string name="event_detail_activity_attention_memory_include">Добавить модуль Внимание/Память в отчет</string>
    <string name="event_detail_activity_field_empty">Данные не заполнены</string>
    <string name="client_name_header_title">Имя клиента</string>
    <string name="client_phone_header_title">Телефон</string>
    <string name="client_email_header_title">Email</string>
    <string name="client_name_field_hint">Иван Иванов</string>
    <string name="client_phone_field_hint">+7 123 456 78 90</string>
    <string name="client_email_field_hint">example@mail.ru</string>
    <string name="child_name_header_title">Имя ребенка</string>
    <string name="child_gender_header_title">Пол</string>
    <string name="child_age_header_title">Возраст</string>
    <string name="child_name_field_hint">Иван Иванов</string>
    <string name="child_age_field_hint">5 лет</string>
    <string-array name="child_genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string name="child_gender_male">Мужской</string>
    <string name="child_gender_female">Женский</string>
    <string name="child_first_fill_client_error">Необходимо сначала заполнить данные о клиенте</string>
    <string name="event_detail_activity_child_name">Имя ребенка</string>
    <string name="event_detail_activity_child_age">Возраст</string>
    <string name="event_detail_activity_client_name_editable_hint">Имя клиента</string>
    <string name="event_detail_activity_client_phone_editable_hint">Телефон</string>
    <string name="event_detail_activity_client_email_editable_hint">Почтовый адрес</string>
    <string name="event_detail_activity_child_name_editable_hint">Имя ребенка</string>
    <string name="event_detail_add_client_first">Необходимо сначала внести данные о клиенте!</string>
    <string name="event_detail_event_added">Запись успешно создана!</string>
    <string name="event_detail_event_edited">Запись успешно изменена!</string>
    <string name="event_detail_create_new_mode_title">Новая запись</string>
    <string name="event_detail_date_hint">Выберите дату</string>
    <string name="event_detail_child_hint">Необходимо указать данные ребенка</string>
    <string name="event_detail_client_hint">Необходимо указать данные клиента</string>
    <string name="event_detail_client_email_hint">Необходимо указать email клиента</string>
    <string name="client_added">Запись успешно создана!</string>
    <string name="client_edited">Запись успешно изменена!</string>
    <string name="child_added">Запись успешно создана!</string>
    <string name="child_edited">Запись успешно изменена!</string>
    <string name="event_deleted">Запись была удалена</string>
    <string name="search_by_name_email_phone">Имя, номер телефона или эл. почта</string>
    <string name="search_by_child_name">Имя ребенка</string>
    <string name="client_data_is_not_full">Данные о клиенте указаны не полностью</string>
    <string name="child_data_is_not_full">Данные о ребенке указаны не полностью</string>
    <string name="child_age_not_set">Укажите возраст!</string>
    <string name="child_name_not_set">Укажите имя!</string>
    <string name="child_gender_not_set">Укажите пол ребенка!</string>
    <string name="time_is_not_set">Необходимо указать время записи</string>
    <string name="action_next_week">Следующая неделя</string>
    <string name="action_prev_week">Предыдущая неделя</string>
    <string name="report_status_new_hint">Запись еще не была произведена</string>
    <string name="report_status_ready_hint">Результаты измерений обработаны и отчет готов</string>
    <string name="report_status_sent_hint">Отчет был выслан клиенту</string>
    <string name="report_status_sent_canceled">Запись была отменена</string>
    <string name="event_detail_time_intervals_empty">Отстутствует возможность записи в выбранный день. Проверьте свое расписание</string>
    <string name="report_status_uploaded_hint">Результаты измерений были загружены</string>
    <string name="calendar_add_event">СОЗДАТЬ</string>
    <string name="event_detail_activity_choose_date_hint">Показаны события за %s</string>
    <string name="children_activity_edit_hint">Вы перешли в режим редактирования записи</string>
    <string name="children_activity_cancel_edit_hint">Вы отменили редактирование записи</string>
    <string name="client_activity_edit_hint">Вы перешли в режим редактирования записи</string>
    <string name="client_activity_cancel_edit_hint">Вы отменили редактирование записи</string>
    <string name="report_status_new">Новый</string>
    <string name="report_status_cancelled">Отменен</string>
    <string name="report_status_uploaded">Загружен</string>
    <string name="report_status_ready">Готов</string>
    <string name="report_status_sent">Отправлен</string>
    <string name="event_detail_delete_event_confirmation_dialog_message">Вы действительно хотите удалить запись?</string>
    <string name="calendar_confirm_delete_title">Подтверждение</string>
    <string name="child_age_selection_title">Выберите возраст:</string>
    <string name="event_detail_send_to_location_message">Мной получено согласие клиента на получение копии отчета в целях проведения консультации, время согласовано</string>
    <string name="event_detail_send_to_location_send">Отправить</string>
    <string name="event_detail_send_to_location_complete">Копия отчета была отправлена в филиал</string>
    <string name="event_detail_include_attention_memory_complete">Модуль был добавлен в отчет</string>
    <string name="arhimedes">АРХИМЕД</string>
    <string name="event_detail_archimedes_included">В отчет будет включена панель Архимед при наличии подходящей</string>
    <string name="event_detail_archimedes_not_included">КЛИЕНТ НЕ ПОЛУЧИТ ПАНЕЛЬ АРХИМЕД – ВАШ ПРОФИЛЬ В СИСТЕМЕ НЕ АКТИВНЫЙ</string>
    <string name="hobby">ХОББИ</string>
    <string name="event_detail_hobby_panel_included">Панель включена</string>
    <string name="event_detail_hobby_panel_not_included">Панель не включена</string>
    <string name="event_detail_hobby_included_status">В отчет будет включена панель Хобби</string>
    <string name="event_detail_hobby_not_included_status">В отчет НЕ будет включена панель Хобби</string>
    <string name="event_detail_include_attention_memory_confirmation_dialog_message">Включить модуль Внимание/Память в отчет?</string>
    <string name="include">Включить</string>
    <string name="event_confirm_attention_memory_include_success">Модуль Внимание/Память добавлен в отчет</string>
    <string name="event_confirm_clear_database">База данных содержит записи, очистить ее перед проведением приема?</string>
    <string name="event_confirm_clear">Очистить</string>
    <string name="event_confirm_clear_database_title">Обнаружены данные</string>
    <string name="event_detail_include_hobby_confirmation_dialog_title">Модуль Хобби</string>
    <string name="event_detail_include_hobby_confirmation_dialog_message">Включить модуль Хобби в отчет?</string>
    <string name="event_detail_include_hobby_confirmation_dialog_include">Включить</string>
    <string name="school_mode_submit_hint">Все данные были записаны. Теперь вы можете завершить сессию.</string>
    <string name="event_detail_intervals_selection_dialog_title">Выберите время записи</string>
    <string name="calendar_report_yesterday">Вчера</string>
    <string name="calendar_report_today">Сегодня</string>
    <string name="dashboard_gender">Пол ребенка</string>
    <string name="dashboard_gender_male">Мужской</string>
    <string name="dashboard_gender_female">Женский</string>
    <string name="schedule_only_this_week">только эта неделя</string>
    <string name="schedule_save_1_week">1 неделя</string>
    <string name="schedule_save_2_weeks">2 недели</string>
    <string name="schedule_save_3_weeks">3 недели</string>
    <string name="schedule_save_4_weeks">4 недели</string>
    <string name="schedule_save_5_weeks">5 недель</string>
    <string name="session_start_writing">Начать запись</string>
    <string name="session_try_again">Попробовать снова</string>
    <string name="session_connect">Соединить</string>
    <string name="session_connected">Подключено</string>
    <string name="session_connection_in_progress">Идет соединение...</string>
    <string name="session_connection_instruction">
        1. Включите питание на нейроинтерфейсе, убедитесь что он работает.
        \n\n2. Нажмите на кнопку \"Соединить\" и дождитесь статуса \"Подключено\".
        \n\n3. Нажмите на кнопку \"Начать запись\" для начала работы.
    </string>
    <string name="settings">Настройки</string>
    <string name="session_question_variant_10">10</string>
    <string name="session_question_variant_20">20</string>
    <string name="session_question_variant_40">40</string>
    <string name="session_question_variant_60">60</string>
    <string name="session_question_variant_90">90</string>
    <string name="questionnaire_report_type_question">Выберите состав отчета:</string>
    <string name="session_report_type_5">ОСНОВНОЙ: TQ отчет + ЛК</string>
    <string name="session_report_type_0">ЭКОНОМ: TQ отчет без ЛК</string>
    <string name="session_report_type_1">ПРОМО: Одна страница ВнП</string>
    <string name="session_report_type_6">ПРОМО: Только страницы ЛК</string>
    <string name="session_report_type_4">БЕСПЛАТНЫЙ: Уроки без Мороки</string>
    <string name="session_report_type_2">(не используется)</string>
    <string name="session_report_type_3">(не используется)</string>
    <string name="session_report_type_7">(не используется)</string>
    <string name="session_report_type_8">(не используется)</string>
    <string name="session_report_type_9">(не используется)</string>
    <string name="session_report_type_10">(не используется)</string>
</resources>