<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="@dimen/submit_question_title_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/questionnaire_report_type_question"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/question_text_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/question_text_view"
        android:layout_marginLeft="@dimen/submit_question_answers_horizontal_margin"
        android:layout_marginRight="@dimen/submit_question_answers_horizontal_margin"
        android:layout_marginTop="@dimen/submit_question_answers_top_margin"
        android:layout_marginBottom="@dimen/submit_question_has_answer_vertical_margin"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_0"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_0"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_1"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_2"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_3"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_3"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_4"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_4"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_5"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_6"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_6"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_7"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_7"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_8"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_8"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_9"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_9"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_10"
                android:padding="@dimen/submit_question_report_type_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/session_report_type_10"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>