<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="@dimen/submit_question_title_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/question_text_view" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/question_text_view"
        android:layout_marginLeft="@dimen/submit_question_answers_horizontal_margin"
        android:layout_marginRight="@dimen/submit_question_answers_horizontal_margin"
        android:layout_marginTop="@dimen/submit_question_answers_top_margin"
        android:weightSum="5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/session_question_variant_10"
            android:textSize="@dimen/submit_question_answer_text_size"
            android:textColor="@color/white"
            android:background="@drawable/background_button_unselected"
            android:layout_weight="1"
            android:id="@+id/answer_10_button"
            android:layout_marginRight="@dimen/submit_question_answer_right_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/session_question_variant_20"
            android:textSize="@dimen/submit_question_answer_text_size"
            android:textColor="@color/white"
            android:background="@drawable/background_button_unselected"
            android:layout_weight="1"
            android:id="@+id/answer_20_button"
            android:layout_marginRight="@dimen/submit_question_answer_right_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/session_question_variant_40"
            android:textSize="@dimen/submit_question_answer_text_size"
            android:textColor="@color/white"
            android:background="@drawable/background_button_unselected"
            android:layout_weight="1"
            android:id="@+id/answer_40_button"
            android:layout_marginRight="@dimen/submit_question_answer_right_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/session_question_variant_60"
            android:textSize="@dimen/submit_question_answer_text_size"
            android:textColor="@color/white"
            android:background="@drawable/background_button_unselected"
            android:layout_weight="1"
            android:id="@+id/answer_60_button"
            android:layout_marginRight="@dimen/submit_question_answer_right_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/session_question_variant_90"
            android:textSize="@dimen/submit_question_answer_text_size"
            android:textColor="@color/white"
            android:background="@drawable/background_button_unselected"
            android:layout_weight="1"
            android:id="@+id/answer_90_button"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/has_answer_checkbox"
        android:checked="false"
        android:textSize="@dimen/submit_question_has_answer_text_size"
        android:textAlignment="center"
        android:padding="@dimen/submit_question_has_answer_padding"
        android:layout_marginTop="@dimen/submit_question_has_answer_vertical_margin"
        android:layout_marginBottom="@dimen/submit_question_has_answer_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttons_layout"
        android:layout_alignStart="@+id/buttons_layout"
        android:layout_below="@+id/buttons_layout"
        android:text="@string/session_has_answer" />


</RelativeLayout>